[package]
name = "rs9cc"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/illumination-k/rs9cc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[badges]
github = { repository = "illumination-k/graph-clustering-rs", workflow = "Rust" }